--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
             <h1 class="h1-left">Cinema History
                 تاريخ السينما
             </h1>
-
+<a href="Trailer.mp4">
             <button class="watch-trailer">Watch Trailer</button>
+        </a>
         </center>
             </div>
             <div class="episodes">
@@ -65,12 +66,12 @@
     
             </div>
             <div class="center">
-                <a href="#"><button class="center-e">Episode 1</button></a>
-                <a href="#"><button class="center-e">Episode 2</button></a>
-                <a href="#"><button class="center-e">Episode 3</button></a>
-                <a href="#"><button class="center-e">Episode 4</button></a>
-                <a href="#"><button class="center-e">Episode 5</button></a>
-                <a href="#"><button class="center-e">Episode 6</button></a>
+                <a href="https://youtu.be/5BZDXFfPx3I"><button class="center-e">Episode 1</button></a>
+                <a href="https://youtu.be/VlFhKSCURgY"><button class="center-e">Episode 2</button></a>
+                <a href="https://youtu.be/9V0wr0U9GPM"><button class="center-e">Episode 3</button></a>
+                <a href="https://youtu.be/YkCM38QYzvE"><button class="center-e">Episode 4</button></a>
+                <a href="https://youtu.be/n5wPqnPG4X0"><button class="center-e">Episode 5</button></a>
+                <a href="https://youtu.be/yKyRHMysqTE"><button class="center-e">Episode 6</button></a>
 
             </div>
             
